update onboarding layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
         android:layout_marginHorizontal="@dimen/spacing_3"
         android:layout_marginBottom="@dimen/spacing_3"
         android:text="@string/onboarding_title"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@id/textViewOnboarding"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/spacing_3"
-        android:backgroundTint="#f25167"
+        style="@style/Theme.Popcorn.PrimaryButton"
         android:text="@string/login"
         app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,9 +73,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/spacing_3"
-        android:backgroundTint="@color/white"
+        style="@style/Theme.Popcorn.SecondaryButton"
         android:text="@string/skip"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
