--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,14 @@
     </style>
 
     <style name="Theme.Popcorn" parent="Base.Theme.Popcorn" />
+
+    <style name="Theme.Popcorn.PrimaryButton" parent="Widget.Material3.Button">
+        <item name="backgroundTint">@color/red</item>
+    </style>
+
+    <style name="Theme.Popcorn.SecondaryButton" parent="Widget.Material3.Button">
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="iconTint">@color/black</item>
+    </style>
 </resources>
