--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -3,7 +3,7 @@
 
     <gradient
         android:angle="90"
-        android:centerColor="#00000000"
-        android:endColor="#1C1C27"
-        android:startColor="#1C1C27" />
+        android:startColor="?attr/android:windowBackground"
+        android:centerColor="@android:color/transparent"
+        android:endColor="?attr/android:windowBackground"/>
 </shape>
