--- a/app/src/main/res/layout/fragment_popular_movies.xml
+++ b/app/src/main/res/layout/fragment_popular_movies.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".home.popularmovies.PopularMoviesFragment">
+    tools:context=".home.popularmovies.ui.PopularMoviesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_tv_series"
+        android:id="@+id/recycler_movies"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="horizontal"
