--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -11,7 +11,7 @@
         android:layout_height="150dp">
 
         <ImageView
-            android:id="@+id/image_movie_poster"
+            android:id="@+id/imageCast"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:importantForAccessibility="no"
