--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -47,7 +47,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingVertical="@dimen/spacing_3">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textViewDuration"
@@ -55,6 +56,8 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:paddingStart="@dimen/spacing_3"
+                android:paddingEnd="@dimen/spacing_2"
                 tools:text="@tools:sample/lorem" />
 
             <com.google.android.material.textview.MaterialTextView
@@ -64,14 +67,17 @@
                 android:drawableStart="@drawable/ribbon_outline_icon"
                 app:layout_constraintStart_toEndOf="@id/textViewDuration"
                 app:layout_constraintTop_toTopOf="parent"
+                android:paddingEnd="@dimen/spacing_3"
                 tools:text="@tools:sample/lorem" />
 
             <HorizontalScrollView
                 android:id="@+id/horizontalScrollView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingHorizontal="@dimen/spacing_3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                android:paddingBottom="@dimen/spacing_2"
                 app:layout_constraintTop_toBottomOf="@id/textViewVotes">
 
                 <com.google.android.material.chip.ChipGroup
@@ -84,6 +90,7 @@
             </HorizontalScrollView>
 
             <com.google.android.material.textview.MaterialTextView
+                android:paddingHorizontal="@dimen/spacing_3"
                 android:id="@+id/textViewSynopsisTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -94,6 +101,7 @@
                 app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />
 
             <com.google.android.material.textview.MaterialTextView
+                android:paddingHorizontal="@dimen/spacing_3"
                 android:id="@+id/textViewSynopsis"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -104,6 +112,7 @@
 
 
             <androidx.fragment.app.FragmentContainerView
+                android:layout_marginTop="@dimen/spacing_3"
                 android:id="@+id/fragmentContainerViewCast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -116,120 +125,3 @@
     </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-    <!--
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appbar"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            app:toolbarId="@+id/toolbar" />
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            app:expandedTitleGravity="center_horizontal|bottom"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
-
-            <ImageView
-                android:id="@+id/app_bar_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@null"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                app:layout_collapseMode="pin"
-                tools:title="@tools:sample/lorem"/>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/textViewDuration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="@tools:sample/lorem" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/textViewVotes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ribbon_outline_icon"
-                    app:layout_constraintStart_toEndOf="@id/textViewDuration"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="@tools:sample/lorem" />
-
-                <HorizontalScrollView
-                    android:id="@+id/horizontalScrollView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/textViewVotes">
-
-                    <com.google.android.material.chip.ChipGroup
-                        android:id="@+id/chipGroup"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:singleLine="true">
-
-                    </com.google.android.material.chip.ChipGroup>
-                </HorizontalScrollView>
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/textViewSynopsisTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/synopsis"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/textViewSynopsis"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/textViewSynopsisTitle"
-                    tools:text="@tools:sample/lorem/random" />
-
-
-                <androidx.fragment.app.FragmentContainerView
-                    android:id="@+id/fragmentContainerViewCast"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/textViewSynopsis" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.core.widget.NestedScrollView>
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    -->
