update votes icon and details title

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -17,6 +17,8 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="450dp"
+            app:expandedTitleTextAppearance="@style/TextAppearance.Material3.HeadlineMedium"
+            app:maxLines="2"
             app:layout_scrollFlags="exitUntilCollapsed|scroll|enterAlways|enterAlwaysCollapsed|snap"
             app:toolbarId="@id/toolbar">
 
@@ -29,6 +31,16 @@
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                android:importantForAccessibility="no"
+                android:scaleType="centerCrop"
+                android:src="@drawable/gradient"
+                app:layout_collapseMode="parallax" />
+
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
@@ -64,7 +76,7 @@
                 android:id="@+id/textViewVotes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ribbon_outline_icon"
+                android:drawableStart="@drawable/ic_star_outline"
                 app:layout_constraintStart_toEndOf="@id/textViewDuration"
                 app:layout_constraintTop_toTopOf="parent"
                 android:paddingEnd="@dimen/spacing_3"
