--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
     <gradient
-        android:angle="90"
-        android:startColor="?attr/android:windowBackground"
+        android:angle="240"
+        android:endColor="@android:color/white"
         android:centerColor="@android:color/transparent"
-        android:endColor="?attr/android:windowBackground"/>
+        android:startColor="@android:color/transparent" />
 </shape>
