fix titles and genres padding

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -83,6 +83,7 @@
                 tools:text="@tools:sample/lorem" />
 
             <HorizontalScrollView
+                android:clipToPadding="false"
                 android:id="@+id/horizontalScrollView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
