--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,25 +39,15 @@
                 android:id="@+id/fragmentContainerTrends"
                 android:name="com.github.vitorfg8.popcorn.home.trends.ui.TrendsFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/popular_movies"
-                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
+                android:layout_marginBottom="@dimen/spacing_4" />
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/fragmentContainerMovies"
                 android:name="com.github.vitorfg8.popcorn.home.popularmovies.ui.PopularMoviesFragment"
                 android:layout_width="match_parent"
+                android:layout_marginBottom="@dimen/spacing_2"
                 android:layout_height="wrap_content" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/popular_tv_shows"
-                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/fragmentContainerTVShows"
