--- a/app/src/main/res/layout/fragment_popular_movies.xml
+++ b/app/src/main/res/layout/fragment_popular_movies.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".home.popularmovies.ui.PopularMoviesFragment">
 
+    <com.google.android.material.textview.MaterialTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/spacing_4"
+        android:layout_marginBottom="@dimen/spacing_2"
+        android:text="@string/popular_movies"
+        android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_movies"
+        android:id="@+id/recyclerMovies"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="horizontal"
+        android:clipToPadding="false"
+        android:paddingStart="@dimen/spacing_4"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_poster" />
 
-</FrameLayout>
+</LinearLayout>
