--- a/app/src/main/res/drawable/gradient_black.xml
+++ b/app/src/main/res/drawable/gradient_black.xml
@@ -1,8 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="240"
-        android:endColor="?android:attr/backgroundTint"
+        android:angle="90"
         android:centerColor="@android:color/transparent"
-        android:startColor="?android:attr/backgroundTint" />
+        android:endColor="@android:color/transparent"
+        android:startColor="@android:color/black" />
 </shape>
