--- a/app/src/main/res/drawable/play_circle.xml
+++ b/app/src/main/res/drawable/play_circle.xml
@@ -7,8 +7,8 @@
         android:fillColor="#00000000"
         android:pathData="M448,256c0,-106 -86,-192 -192,-192S64,150 64,256s86,192 192,192S448,362 448,256Z"
         android:strokeWidth="32"
-        android:strokeColor="#000" />
+        android:strokeColor="#FFF" />
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="#FFF"
         android:pathData="M216.32,334.44 L330.77,265.3a10.89,10.89 0,0 0,0 -18.6L216.32,177.56A10.78,10.78 0,0 0,200 186.87V325.13A10.78,10.78 0,0 0,216.32 334.44Z" />
 </vector>
