--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,18 +28,11 @@
         <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
         <item name="fontFamily">@font/inter</item>
-        <!--<item name="android:windowTranslucentStatus">true</item>-->
     </style>
 
     <style name="Theme.Popcorn" parent="Base.Theme.Popcorn" />
 
-    <style name="Theme.Popcorn.PrimaryButton" parent="Widget.Material3.Button">
-        <!--<item name="backgroundTint">@color/red</item>-->
-    </style>
-
-    <style name="Theme.Popcorn.SecondaryButton" parent="Widget.Material3.Button">
-   <!--     <item name="backgroundTint">@color/white</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="iconTint">@color/black</item>-->
+    <style name="Theme.Popcorn.TranslucentStatus" parent="Base.Theme.Popcorn">
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 </resources>
