--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -16,8 +16,7 @@
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="450dp"
-            app:expandedTitleTextAppearance="@style/TextAppearance.Material3.HeadlineMedium"
+            android:layout_height="525dp"
             app:maxLines="2"
             app:layout_scrollFlags="exitUntilCollapsed|scroll|enterAlways|enterAlwaysCollapsed|snap"
             app:toolbarId="@id/toolbar">
@@ -46,6 +45,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                app:title=""
                 app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
