--- a/app/src/main/res/layout/fragment_default_error.xml
+++ b/app/src/main/res/layout/fragment_default_error.xml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/spacing_2"
+    android:layout_marginTop="@dimen/spacing_2"
+    android:layout_marginEnd="@dimen/spacing_2"
     tools:context=".utils.DefaultErrorFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/default_error_message" />
+        android:layout_marginHorizontal="@dimen/spacing_2"
+        tools:context=".utils.DefaultErrorFragment">
 
-</FrameLayout>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageError"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:src="@drawable/popcorn_error"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/textOops"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/default_error_message"
+            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
+            app:layout_constraintEnd_toStartOf="@id/imageError"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/error"
+            app:layout_constraintEnd_toStartOf="@id/imageError"
+            app:layout_constraintStart_toStartOf="@id/textOops"
+            app:layout_constraintTop_toBottomOf="@id/textOops" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
