add skeleton for details

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,4 +61,5 @@
     <color name="md_theme_dark_surfaceTint">#FFB2B7</color>
     <color name="md_theme_dark_outlineVariant">#524344</color>
     <color name="md_theme_dark_scrim">#000000</color>
+    <color name="placeholder">#e0e0e0</color>
 </resources>
