--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -18,19 +18,29 @@
             android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="525dp"
-            app:maxLines="2"
             app:layout_scrollFlags="exitUntilCollapsed|scroll|enterAlways|enterAlwaysCollapsed|snap"
+            app:maxLines="2"
             app:toolbarId="@id/toolbar">
 
-            <ImageView
-                android:id="@+id/appBarImage"
+
+            <com.faltenreich.skeletonlayout.SkeletonLayout
+                android:id="@+id/skeletonLayoutPoster"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:contentDescription="@string/poster"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                app:layout_collapseMode="parallax">
+
+                <ImageView
+                    android:id="@+id/appBarImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/poster"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+            </com.faltenreich.skeletonlayout.SkeletonLayout>
 
             <ImageView
                 android:layout_width="match_parent"
@@ -46,8 +56,8 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title=""
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin"
+                app:title="" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -58,83 +68,98 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/spacing_4">
+            android:orientation="vertical">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/textViewDuration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:paddingStart="@dimen/spacing_4"
-                android:paddingEnd="@dimen/spacing_2"
-                tools:text="@tools:sample/lorem" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/textViewVotes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_star_outline"
-                app:layout_constraintStart_toEndOf="@id/textViewDuration"
-                app:layout_constraintTop_toTopOf="parent"
-                android:paddingEnd="@dimen/spacing_4"
-                tools:text="@tools:sample/lorem" />
-
-            <HorizontalScrollView
-                android:clipToPadding="false"
-                android:id="@+id/horizontalScrollView"
+            <com.faltenreich.skeletonlayout.SkeletonLayout
+                android:id="@+id/skeletonLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="@dimen/spacing_4"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:paddingBottom="@dimen/spacing_2"
-                app:layout_constraintTop_toBottomOf="@id/textViewVotes">
+                android:layout_height="wrap_content">
 
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/chipGroup"
-                    android:layout_width="wrap_content"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:singleLine="true">
+                    android:paddingVertical="@dimen/spacing_4">
 
-                </com.google.android.material.chip.ChipGroup>
-            </HorizontalScrollView>
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/textViewDuration"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/spacing_4"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="@tools:sample/lorem" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:paddingHorizontal="@dimen/spacing_4"
-                android:id="@+id/textViewSynopsisTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/synopsis"
-                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/textViewVotes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/spacing_4"
+                        android:layout_marginEnd="@dimen/spacing_4"
+                        android:drawableStart="@drawable/ic_star_outline"
+                        app:layout_constraintStart_toEndOf="@id/textViewDuration"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="@tools:sample/lorem" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:paddingHorizontal="@dimen/spacing_4"
-                android:id="@+id/textViewSynopsis"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textViewSynopsisTitle"
-                tools:text="@tools:sample/lorem/random" />
+                    <HorizontalScrollView
+                        android:id="@+id/horizontalScrollView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:paddingHorizontal="@dimen/spacing_4"
+                        android:paddingBottom="@dimen/spacing_2"
+                        android:scrollbars="none"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/textViewVotes">
 
+                        <com.google.android.material.chip.ChipGroup
+                            android:id="@+id/chipGroup"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:singleLine="true">
+
+                        </com.google.android.material.chip.ChipGroup>
+                    </HorizontalScrollView>
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/textViewSynopsisTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/spacing_4"
+                        android:text="@string/synopsis"
+                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/textViewSynopsis"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/spacing_4"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/textViewSynopsisTitle"
+                        tools:text="@tools:sample/lorem/random" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </com.faltenreich.skeletonlayout.SkeletonLayout>
 
             <androidx.fragment.app.FragmentContainerView
-                android:layout_marginTop="@dimen/spacing_4"
                 android:id="@+id/fragmentContainerViewCast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textViewSynopsis" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
 
     </androidx.core.widget.NestedScrollView>
 
