--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,7 +27,7 @@
         <item name="colorOnSurfaceInverse">@color/md_theme_light_inverseOnSurface</item>
         <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
-        <item name="fontFamily">@font/inter</item>
+        <item name="fontFamily">@font/archivo</item>
         <item name="homeAsUpIndicator">@drawable/ic_chevron_back</item>
     </style>
 
